parser.output
Terminales no usados en la gramática

   porcentaje


Gramática

    0 $accept: INICIO $end

    1 INICIO: LCOMANDOS

    2 LCOMANDOS: LCOMANDOS COMANDO
    3          | COMANDO

    4 COMANDO: pmkdisk PROPIEDADESMK
    5        | prmdisk PROPIEDADESRM
    6        | pfdisk PROPIEDADESFD
    7        | pmount PROPIEDADESMOUNT
    8        | punmount PROPIEDADESUNMOUNT
    9        | prep PROPIEDADESREP
   10        | pexec PROPIEDADESEXEC
   11        | pmkfs PROPIEDADESMKFS
   12        | plogin PROPIEDADESLOGIN
   13        | plogout
   14        | pmkgrp PROPIEDADESMKGRP
   15        | prmgrp PROPIEDADESRMGRP
   16        | pmkusr PROPIEDADESMKUSR
   17        | prmusr PROPIEDADESRMUSR
   18        | pchmod PROPIEDADESCHMOD
   19        | pmkfile PROPIEDADESMKFILE
   20        | pmkdir PROPIEDADESMKDIR
   21        | error

   22 PROPIEDADESMK: PROPIEDADESMK ampersand psize guion mayorQ numero
   23              | PROPIEDADESMK ampersand punit guion mayorQ UNIDAD
   24              | PROPIEDADESMK ampersand ppath guion mayorQ PATH
   25              | PROPIEDADESMK ampersand pname guion mayorQ id
   26              | ampersand pname guion mayorQ id
   27              | ampersand psize guion mayorQ numero
   28              | ampersand punit guion mayorQ UNIDAD
   29              | ampersand ppath guion mayorQ PATH

   30 AJUSTE: pbf
   31       | pff
   32       | pwf

   33 UNIDAD: pb
   34       | pk
   35       | pm

   36 PATH: cadena
   37     | id

   38 PROPIEDADESRM: ampersand ppath guion mayorQ PATH

   39 PROPIEDADESFD: PROPIEDADESFD ampersand psize guion mayorQ numero
   40              | PROPIEDADESFD ampersand punit guion mayorQ UNIDAD
   41              | PROPIEDADESFD ampersand ppath guion mayorQ PATH
   42              | PROPIEDADESFD ampersand ptype guion mayorQ TYPE
   43              | PROPIEDADESFD ampersand pdetele guion mayorQ DELETE
   44              | PROPIEDADESFD ampersand pname guion mayorQ PATH
   45              | PROPIEDADESFD ampersand padd guion mayorQ E
   46              | PROPIEDADESFD ampersand pfit guion mayorQ AJUSTE
   47              | PROPIEDADESFD ampersand pallocation guion mayorQ ALLOCATION
   48              | ampersand psize guion mayorQ numero
   49              | ampersand punit guion mayorQ UNIDAD
   50              | ampersand ppath guion mayorQ PATH
   51              | ampersand ptype guion mayorQ TYPE
   52              | ampersand pdetele guion mayorQ DELETE
   53              | ampersand pname guion mayorQ PATH
   54              | ampersand padd guion mayorQ E
   55              | ampersand pfit guion mayorQ AJUSTE
   56              | ampersand pallocation guion mayorQ ALLOCATION

   57 DELETE: pfast
   58       | pfull

   59 ALLOCATION: pc
   60           | pe
   61           | pix

   62 E: numero
   63  | guion numero

   64 TYPE: pp
   65     | pe
   66     | pl

   67 PROPIEDADESMOUNT: PROPIEDADESMOUNT guion ppath igual PATH
   68                 | PROPIEDADESMOUNT guion pname igual PATH
   69                 | guion ppath igual PATH
   70                 | guion pname igual PATH

   71 PROPIEDADESUNMOUNT: pid igual id

   72 PROPIEDADESREP: PROPIEDADESREP guion pname igual NAME
   73               | PROPIEDADESREP guion ppath igual PATH
   74               | PROPIEDADESREP guion pid igual id
   75               | guion pname igual NAME
   76               | guion ppath igual PATH
   77               | guion pid igual id

   78 NAME: pmbr
   79     | pdisk

   80 FORMAT: p2fs
   81       | p3fs

   82 VALUE: id
   83      | cadena
   84      | numero

   85 PROPIEDADESEXEC: guion ppath igual PATH

   86 PROPIEDADESMKFS: PROPIEDADESMKFS guion pid igual id
   87                | PROPIEDADESMKFS guion ptype igual DELETE
   88                | PROPIEDADESMKFS guion pfs igual FORMAT
   89                | guion pid igual id
   90                | guion ptype igual DELETE
   91                | guion pfs igual FORMAT

   92 PROPIEDADESLOGIN: PROPIEDADESLOGIN guion pusr igual PATH
   93                 | PROPIEDADESLOGIN guion ppwd igual VALUE
   94                 | PROPIEDADESLOGIN guion pid igual id
   95                 | guion pusr igual PATH
   96                 | guion ppwd igual VALUE
   97                 | guion pid igual id

   98 PROPIEDADESRMGRP: guion pname igual PATH

   99 PROPIEDADESMKGRP: guion pname igual PATH

  100 PROPIEDADESMKUSR: PROPIEDADESMKUSR guion pusr igual VALUE
  101                 | PROPIEDADESMKUSR guion ppwd igual VALUE
  102                 | PROPIEDADESMKUSR guion pgrp igual VALUE
  103                 | guion pusr igual VALUE
  104                 | guion ppwd igual VALUE
  105                 | guion pgrp igual VALUE

  106 PROPIEDADESRMUSR: guion pusr igual PATH

  107 PROPIEDADESCHMOD: PROPIEDADESCHMOD guion ppath igual PATH
  108                 | PROPIEDADESCHMOD guion pugo igual numero
  109                 | PROPIEDADESCHMOD guion pr
  110                 | guion ppath igual PATH
  111                 | guion pugo igual numero
  112                 | guion pr

  113 PROPIEDADESMKFILE: PROPIEDADESMKFILE guion ppath igual PATH
  114                  | PROPIEDADESMKFILE guion pp
  115                  | PROPIEDADESMKFILE guion psize igual numero
  116                  | PROPIEDADESMKFILE guion pcont igual PATH
  117                  | guion ppath igual PATH
  118                  | guion pp
  119                  | guion psize igual numero
  120                  | guion pcont igual PATH

  121 PROPIEDADESMKDIR: PROPIEDADESMKDIR guion ppath igual PATH
  122                 | PROPIEDADESMKDIR guion pp
  123                 | guion ppath igual PATH
  124                 | guion pp


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 21
numero (258) 22 27 39 48 62 63 84 108 111 115 119
cadena (259) 36 83
pmkdisk (260) 4
psize (261) 22 27 39 48 115 119
pfit (262) 46 55
punit (263) 23 28 40 49
ppath (264) 24 29 38 41 50 67 69 73 76 85 107 110 113 117 121 123
prmdisk (265) 5
pfdisk (266) 6
ptype (267) 42 51 87 90
pdetele (268) 43 52
pname (269) 25 26 44 53 68 70 72 75 98 99
padd (270) 45 54
pmount (271) 7
punmount (272) 8
pid (273) 71 74 77 86 89 94 97
prep (274) 9
pexec (275) 10
id (276) 25 26 37 71 74 77 82 86 89 94 97
igual (277) 67 68 69 70 71 72 73 74 75 76 77 85 86 87 88 89 90 91 92
    93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 110 111
    113 115 116 117 119 120 121 123
guion (278) 22 23 24 25 26 27 28 29 38 39 40 41 42 43 44 45 46 47 48
    49 50 51 52 53 54 55 56 63 67 68 69 70 72 73 74 75 76 77 85 86
    87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121
    122 123 124
pb (279) 33
pk (280) 34
pm (281) 35
pbf (282) 30
pff (283) 31
pwf (284) 32
pp (285) 64 114 118 122 124
pe (286) 60 65
pl (287) 66
pfast (288) 57
pfull (289) 58
pmbr (290) 78
pdisk (291) 79
pmkfs (292) 11
pfs (293) 88 91
p2fs (294) 80
p3fs (295) 81
plogin (296) 12
pusr (297) 92 95 100 103 106
ppwd (298) 93 96 101 104
plogout (299) 13
prmgrp (300) 15
pmkgrp (301) 14
pmkusr (302) 16
pgrp (303) 102 105
prmusr (304) 17
pchmod (305) 18
pr (306) 109 112
pugo (307) 108 111
pmkfile (308) 19
pcont (309) 116 120
pmkdir (310) 20
ampersand (311) 22 23 24 25 26 27 28 29 38 39 40 41 42 43 44 45 46
    47 48 49 50 51 52 53 54 55 56
mayorQ (312) 22 23 24 25 26 27 28 29 38 39 40 41 42 43 44 45 46 47
    48 49 50 51 52 53 54 55 56
porcentaje (313)
pallocation (314) 47 56
pc (315) 59
pix (316) 61


No terminales con las reglas donde aparecen

$accept (62)
    en la izquierda: 0
INICIO (63)
    en la izquierda: 1, en la derecha: 0
LCOMANDOS (64)
    en la izquierda: 2 3, en la derecha: 1 2
COMANDO (65)
    en la izquierda: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21,
    en la derecha: 2 3
PROPIEDADESMK (66)
    en la izquierda: 22 23 24 25 26 27 28 29, en la derecha: 4 22 23
    24 25
AJUSTE (67)
    en la izquierda: 30 31 32, en la derecha: 46 55
UNIDAD (68)
    en la izquierda: 33 34 35, en la derecha: 23 28 40 49
PATH (69)
    en la izquierda: 36 37, en la derecha: 24 29 38 41 44 50 53 67
    68 69 70 73 76 85 92 95 98 99 106 107 110 113 116 117 120 121 123
PROPIEDADESRM (70)
    en la izquierda: 38, en la derecha: 5
PROPIEDADESFD (71)
    en la izquierda: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
    55 56, en la derecha: 6 39 40 41 42 43 44 45 46 47
DELETE (72)
    en la izquierda: 57 58, en la derecha: 43 52 87 90
ALLOCATION (73)
    en la izquierda: 59 60 61, en la derecha: 47 56
E (74)
    en la izquierda: 62 63, en la derecha: 45 54
TYPE (75)
    en la izquierda: 64 65 66, en la derecha: 42 51
PROPIEDADESMOUNT (76)
    en la izquierda: 67 68 69 70, en la derecha: 7 67 68
PROPIEDADESUNMOUNT (77)
    en la izquierda: 71, en la derecha: 8
PROPIEDADESREP (78)
    en la izquierda: 72 73 74 75 76 77, en la derecha: 9 72 73 74
NAME (79)
    en la izquierda: 78 79, en la derecha: 72 75
FORMAT (80)
    en la izquierda: 80 81, en la derecha: 88 91
VALUE (81)
    en la izquierda: 82 83 84, en la derecha: 93 96 100 101 102 103
    104 105
PROPIEDADESEXEC (82)
    en la izquierda: 85, en la derecha: 10
PROPIEDADESMKFS (83)
    en la izquierda: 86 87 88 89 90 91, en la derecha: 11 86 87 88
PROPIEDADESLOGIN (84)
    en la izquierda: 92 93 94 95 96 97, en la derecha: 12 92 93 94
PROPIEDADESRMGRP (85)
    en la izquierda: 98, en la derecha: 15
PROPIEDADESMKGRP (86)
    en la izquierda: 99, en la derecha: 14
PROPIEDADESMKUSR (87)
    en la izquierda: 100 101 102 103 104 105, en la derecha: 16 100
    101 102
PROPIEDADESRMUSR (88)
    en la izquierda: 106, en la derecha: 17
PROPIEDADESCHMOD (89)
    en la izquierda: 107 108 109 110 111 112, en la derecha: 18 107
    108 109
PROPIEDADESMKFILE (90)
    en la izquierda: 113 114 115 116 117 118 119 120, en la derecha:
    19 113 114 115 116
PROPIEDADESMKDIR (91)
    en la izquierda: 121 122 123 124, en la derecha: 20 121 122


Estado 0

    0 $accept: . INICIO $end

    error     desplazar e ir al estado 1
    pmkdisk   desplazar e ir al estado 2
    prmdisk   desplazar e ir al estado 3
    pfdisk    desplazar e ir al estado 4
    pmount    desplazar e ir al estado 5
    punmount  desplazar e ir al estado 6
    prep      desplazar e ir al estado 7
    pexec     desplazar e ir al estado 8
    pmkfs     desplazar e ir al estado 9
    plogin    desplazar e ir al estado 10
    plogout   desplazar e ir al estado 11
    prmgrp    desplazar e ir al estado 12
    pmkgrp    desplazar e ir al estado 13
    pmkusr    desplazar e ir al estado 14
    prmusr    desplazar e ir al estado 15
    pchmod    desplazar e ir al estado 16
    pmkfile   desplazar e ir al estado 17
    pmkdir    desplazar e ir al estado 18

    INICIO     ir al estado 19
    LCOMANDOS  ir al estado 20
    COMANDO    ir al estado 21


Estado 1

   21 COMANDO: error .

    $default  reduce usando la regla 21 (COMANDO)


Estado 2

    4 COMANDO: pmkdisk . PROPIEDADESMK

    ampersand  desplazar e ir al estado 22

    PROPIEDADESMK  ir al estado 23


Estado 3

    5 COMANDO: prmdisk . PROPIEDADESRM

    ampersand  desplazar e ir al estado 24

    PROPIEDADESRM  ir al estado 25


Estado 4

    6 COMANDO: pfdisk . PROPIEDADESFD

    ampersand  desplazar e ir al estado 26

    PROPIEDADESFD  ir al estado 27


Estado 5

    7 COMANDO: pmount . PROPIEDADESMOUNT

    guion  desplazar e ir al estado 28

    PROPIEDADESMOUNT  ir al estado 29


Estado 6

    8 COMANDO: punmount . PROPIEDADESUNMOUNT

    pid  desplazar e ir al estado 30

    PROPIEDADESUNMOUNT  ir al estado 31


Estado 7

    9 COMANDO: prep . PROPIEDADESREP

    guion  desplazar e ir al estado 32

    PROPIEDADESREP  ir al estado 33


Estado 8

   10 COMANDO: pexec . PROPIEDADESEXEC

    guion  desplazar e ir al estado 34

    PROPIEDADESEXEC  ir al estado 35


Estado 9

   11 COMANDO: pmkfs . PROPIEDADESMKFS

    guion  desplazar e ir al estado 36

    PROPIEDADESMKFS  ir al estado 37


Estado 10

   12 COMANDO: plogin . PROPIEDADESLOGIN

    guion  desplazar e ir al estado 38

    PROPIEDADESLOGIN  ir al estado 39


Estado 11

   13 COMANDO: plogout .

    $default  reduce usando la regla 13 (COMANDO)


Estado 12

   15 COMANDO: prmgrp . PROPIEDADESRMGRP

    guion  desplazar e ir al estado 40

    PROPIEDADESRMGRP  ir al estado 41


Estado 13

   14 COMANDO: pmkgrp . PROPIEDADESMKGRP

    guion  desplazar e ir al estado 42

    PROPIEDADESMKGRP  ir al estado 43


Estado 14

   16 COMANDO: pmkusr . PROPIEDADESMKUSR
